--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Scott's Contact Info</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h3>How to contact me</h3>
